--- a/starter-code/views/authentication/login.ejs
+++ b/starter-code/views/authentication/login.ejs
@@ -1,6 +1,18 @@
+
 <div class="container">
+  <% if ( message.length !== 0 ) { %>
+    <div class="row">
+      <div class="col-sm-12">
+          <div class="alert alert-danger alert-dismissible" role="alert">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <strong>Error!</strong> <%= message[0] %>
+            </div>
+      </div>
+    </div>
+  <% } %>
+
   <div class="row">
-    <div class="col-sm-6 centered-form">
+    <div class="col-sm-12">
       <form action="/login" method="post">
         <div class="form-group">
           <label for="username">Username</label>
